# xmmp-socket

./: .gitignore  CMakeLists.txt  README.md  TODO
conf/: xmpp-socket  xmpp-socket.conf
script/: get_liblion  get_libsocket
src/: EventP.h  handlers.cpp  handlers.h  main.cpp  socket.cpp  socket.h  utils.cpp  utils.h  xmpp.cpp  xmpp.h
